# emotional-wellness-api

./: .env.test  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPREHENSIVE_DOCUMENTATION_SUMMARY.md  DEBUGGING_GUIDE.md  DESIGNDOC.md  DEVELOPMENT.md  Dockerfile  GRANT_MATERIALS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS_UPDATE.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  Makefile  README.md  README_AUTOMATED_TESTING.md  SECURITY_FIXES_SUMMARY.md  SECURITY_VULNERABILITY_REPORT.md  SHADOWRUN_SECURITY_AUDIT.md  TODO.md  add_comments.py  alembic.ini  app.py  bandit_report.json  comment_script.py  demo_slack_webhooks.py  docker-compose.yml  env.example  index.html  main.py  package.json  pyproject.toml  pytest.ini  pytest_enhanced.ini  requirements-dev.txt  requirements-security-updates.txt  requirements-symbolic.txt  requirements-test.txt  (+18 more)
.github/workflows/: ci-cd.yml
deployment/postgres/: init.sql
deployment/scripts/: start.sh
deployment/terraform/: alb.tf  ecs.tf  main.tf  outputs.tf  rds.tf  redis.tf  variables.tf
docs/: ACCESSIBILITY.md  API_REFERENCE.md  BACKEND_API_DOCUMENTATION.md  MONITORING_ENHANCEMENT_ROADMAP.md  architecture.md  crisis-response-protocol.md  dashboard_guide.md  developer-guide.md  security-compliance-guide.md
docs/architecture/: sylva_wren_integration.md
empathy-fine/: .gitignore  LICENSE  README.md  setup.py
examples/: accessibility_demo.py
scripts/: debug-helpers.py  debug.py  debug_cli.py  dev-setup.sh
src/: App.tsx  __init__.py  exceptions.py  index.tsx  main.py
src/accessibility/: __init__.py  adapters.py  compliance.py  config.py  emotional_adaptations.py  integration.py  internationalization.py  middleware.py  preferences.py  router.py
src/analytics/: archetype_visualizer.py  ml_risk_prediction.py  real_time_trends.py
src/api/: __init__.py  security.py  validators.py  version.py
src/cache/: __init__.py  redis.py
src/clinical/: __init__.py  analytics.py  longitudinal.py  models.py  service.py
src/config/: __init__.py  settings.py  validators.py
src/core/: store.ts
src/crisis_management/: slack_ops.py
src/dashboard/: __init__.py  admin_router.py  notification_bot.py  router.py
src/database/: connection.py  encrypted_types.py  models.py  moss_models.py  session.py
src/debugging/: __init__.py  debug_session.py  error_context.py
src/distributed/: symbolic_processor.py
src/game/: core.py  legal_system.py  mission_executor.py
src/integration/: __init__.py  coordinator.py  enhanced_security.py  models.py  moss_adapter.py  router.py
src/middleware/: __init__.py  ip_whitelist.py  (+2 more)
tests/: ai_test_generator.py  automated_testing_framework.py  framework_status.py  pytest.ini  requirements-test.txt  run_automated_tests.py  test_accessibility.py  test_automation_ready.py  test_clinical_analytics.py  test_crisis_compliance.py  test_crisis_compliance_simple.py  test_live_gui.py  test_longitudinal.py  test_ready.py  test_shadowrun_automation.py  test_simple_check.py  test_symbolic.py  test_validators.py
years-of-lead/: OVERNIGHT_MAINTENANCE_FINAL_STATUS.md  OVERNIGHT_MAINTENANCE_STATUS.md  monitor_overnight_maintenance.py  run_overnight_maintenance.sh
(+196 files in other folders)
